bump to morphia 1.5.1 and update generated code