@@ -17,204 +17,211 @@ package com.antwerkz.critter.test;
 
 import com.antwerkz.critter.test.criteria.InvoiceCriteria;
 import com.antwerkz.critter.test.criteria.PersonCriteria;
-import com.mongodb.DB;
 import com.mongodb.MongoClient;
 import com.mongodb.WriteConcern;
 import com.mongodb.WriteResult;
+import com.mongodb.client.MongoDatabase;
 import dev.morphia.Datastore;
+import dev.morphia.DeleteOptions;
 import dev.morphia.Morphia;
+import dev.morphia.UpdateOptions;
 import dev.morphia.query.Query;
 import dev.morphia.query.UpdateResults;
 import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.Test;
 
-import java.net.UnknownHostException;
 import java.time.LocalDateTime;
 
 @Test
 public class CriteriaTest {
 
-  private Datastore datastore;
+    private Datastore datastore;
 
-  @AfterMethod
-  public void clean() {
-    datastore = null;
-  }
-
-  public void invoice() {
-    Datastore ds = getDatastore();
-    Person john = new Person("John", "Doe");
-    ds.save(john);
-    ds.save(new Invoice(LocalDateTime.of(2012, 12, 21, 13, 15), john, new Address("New York City", "NY", "10000"),
-        new Item("ball", 5.0), new Item("skateboard", 17.35)));
-    Person jeff = new Person("Jeff", "Johnson");
-    ds.save(jeff);
-    ds.save(new Invoice(LocalDateTime.of(2006, 3, 4, 8, 7), jeff, new Address("Los Angeles", "CA", "90210"),
-        new Item("movie", 29.95)));
-    Person sally = new Person("Sally", "Ride");
-    ds.save(sally);
-    ds.save(new Invoice(LocalDateTime.of(2007, 8, 16, 19, 27), sally, new Address("Chicago", "IL", "99999"),
-        new Item("kleenex", 3.49), new Item("cough and cold syrup", 5.61)));
-    InvoiceCriteria invoiceCriteria = new InvoiceCriteria(ds);
-    invoiceCriteria.person(john);
-    Invoice invoice = invoiceCriteria.query().first();
-    Invoice doe = ds.createQuery(Invoice.class).filter("person =", john).first();
-    Assert.assertEquals(invoice, doe);
-    Assert.assertEquals(doe.getPerson().getLast(), "Doe");
-    Assert.assertEquals(invoice.getPerson().getLast(), "Doe");
-    Invoice query = ds.createQuery(Invoice.class).field("addresses.city").equal("Chicago").first();
-    Assert.assertNotNull(query);
-    invoiceCriteria = new InvoiceCriteria(ds);
-    invoiceCriteria.addresses().city("Chicago");
-    Invoice critter = invoiceCriteria.query().first();
-    Assert.assertNotNull(critter);
-    Assert.assertEquals(critter, query);
-  }
-
-  @Test
-  public void updates() throws UnknownHostException {
-    Datastore datastore = getDatastore();
-    PersonCriteria personCriteria = new PersonCriteria(datastore);
-    personCriteria.delete();
-    personCriteria.first("Jim");
-    personCriteria.last("Beam");
-
-    Query<Person> query = personCriteria.query();
-
-    Assert.assertEquals(personCriteria.getUpdater()
-        .age(30L)
-        .updateAll().getUpdatedCount(), 0);
-
-    Assert.assertEquals(personCriteria.getUpdater()
-        .age(30L)
-        .upsert().getInsertedCount(), 1);
-
-    UpdateResults update = personCriteria.getUpdater().incAge().updateAll();
-    Assert.assertEquals(update.getUpdatedCount(), 1);
-    Assert.assertEquals(personCriteria.query().get().getAge().longValue(), 31L);
-
-    Assert.assertNotNull(new PersonCriteria(datastore).query().get().getFirst());
-
-    WriteResult delete = datastore.delete(query);
-    Assert.assertEquals(delete.getN(), 1);
-  }
-
-  @Test(enabled = false) // waiting morphia issue #711
-  public void updateFirst() {
-    for (int i = 0; i < 100; i++) {
-      getDatastore().save(new Person("First" + i, "Last" + i));
+    @AfterMethod
+    public void clean() {
+        datastore = null;
     }
-    PersonCriteria criteria = new PersonCriteria(getDatastore());
-    criteria.last().contains("Last2");
-    criteria.getUpdater()
-        .age(1000L)
-        .updateFirst();
 
-    criteria = new PersonCriteria(getDatastore());
-    criteria.age(1000L);
+    public void invoice() {
+        Datastore ds = getDatastore();
+        Person john = new Person("John", "Doe");
+        ds.save(john);
+        ds.save(new Invoice(LocalDateTime.of(2012, 12, 21, 13, 15), john, new Address("New York City", "NY", "10000"),
+            new Item("ball", 5.0), new Item("skateboard", 17.35)));
+        Person jeff = new Person("Jeff", "Johnson");
+        ds.save(jeff);
+        ds.save(new Invoice(LocalDateTime.of(2006, 3, 4, 8, 7), jeff, new Address("Los Angeles", "CA", "90210"),
+            new Item("movie", 29.95)));
+        Person sally = new Person("Sally", "Ride");
+        ds.save(sally);
+        ds.save(new Invoice(LocalDateTime.of(2007, 8, 16, 19, 27), sally, new Address("Chicago", "IL", "99999"),
+            new Item("kleenex", 3.49), new Item("cough and cold syrup", 5.61)));
+        InvoiceCriteria invoiceCriteria = new InvoiceCriteria(ds);
+        invoiceCriteria.person(john);
+        Invoice invoice = invoiceCriteria.query().first();
+        Invoice doe = ds.createQuery(Invoice.class).filter("person =", john).first();
 
-//    Assert.assertEquals(criteria.query().countAll(), 1);
-  }
+        Assert.assertNotNull(doe);
+        Assert.assertEquals(invoice, doe);
+        Assert.assertEquals(doe.getPerson().getLast(), "Doe");
 
-  @Test
-  public void removes() {
-    for (int i = 0; i < 100; i++) {
-      getDatastore().save(new Person("First" + i, "Last" + i));
+        Assert.assertNotNull(invoice);
+        Assert.assertNotNull(invoice.getPerson());
+        Assert.assertEquals(invoice.getPerson().getLast(), "Doe");
+        Invoice query = ds.createQuery(Invoice.class).field("addresses.city").equal("Chicago").first();
+        Assert.assertNotNull(query);
+        invoiceCriteria = new InvoiceCriteria(ds);
+        invoiceCriteria.addresses().city("Chicago");
+        Invoice critter = invoiceCriteria.query().first();
+        Assert.assertNotNull(critter);
+        Assert.assertEquals(critter, query);
     }
-    PersonCriteria criteria = new PersonCriteria(getDatastore());
-    criteria.last().contains("Last2");
-    WriteResult result = criteria.getUpdater()
-        .remove();
-    Assert.assertEquals(result.getN(), 11);
-    Assert.assertEquals(criteria.query().count(), 0);
 
-    criteria = new PersonCriteria(getDatastore());
-    Assert.assertEquals(criteria.query().count(), 89);
+    @Test
+    public void updates() {
+        Datastore datastore = getDatastore();
+        PersonCriteria personCriteria = new PersonCriteria(datastore);
+        personCriteria.delete();
+        personCriteria.first("Jim");
+        personCriteria.last("Beam");
 
-    criteria = new PersonCriteria(getDatastore());
-    criteria.last().contains("Last3");
-    result = criteria.getUpdater().remove(WriteConcern.MAJORITY);
-    Assert.assertEquals(result.getN(), 11);
-    Assert.assertEquals(criteria.query().count(), 0);
-  }
+        Query<Person> query = personCriteria.query();
 
-  public void embeds() {
-    Invoice invoice = new Invoice();
-    invoice.setDate(LocalDateTime.now());
-    Person person = new Person("Mike", "Bloomberg");
-    getDatastore().save(person);
-    invoice.setPerson(person);
-    invoice.add(new Address("New York City", "NY", "10036"));
-    getDatastore().save(invoice);
+        Assert.assertEquals(personCriteria.getUpdater()
+                                          .age(30L)
+                                          .update(new UpdateOptions().multi(true))
+                                          .getUpdatedCount(), 0);
 
-    invoice = new Invoice();
-    invoice.setDate(LocalDateTime.now());
-    person = new Person("Andy", "Warhol");
-    getDatastore().save(person);
+        Assert.assertEquals(personCriteria.getUpdater()
+                                          .age(30L)
+                                          .update(new UpdateOptions().upsert(true))
+                                          .getInsertedCount(), 1);
 
-    invoice.setPerson(person);
-    invoice.add(new Address("NYC", "NY", "10018"));
-    getDatastore().save(invoice);
+        UpdateResults update = personCriteria.getUpdater().incAge().update(new UpdateOptions().multi(true));
+        Assert.assertEquals(update.getUpdatedCount(), 1);
+        Assert.assertEquals(personCriteria.query().first().getAge().longValue(), 31L);
 
-    InvoiceCriteria criteria1 = new InvoiceCriteria(datastore);
-    criteria1.addresses().city().order();
-    Assert.assertEquals(criteria1.query().asList().get(0).getAddresses().get(0).getCity(), "NYC");
+        Assert.assertNotNull(new PersonCriteria(datastore).query().first().getFirst());
 
-    InvoiceCriteria criteria2 = new InvoiceCriteria(datastore);
-    criteria2.addresses().city().order(false);
-    Assert.assertEquals(criteria2.query().asList().get(0).getAddresses().get(0).getCity(), "New York City");
-  }
-
-  public void orQueries() {
-    getDatastore().save(new Person("Mike", "Bloomberg"));
-    getDatastore().save(new Person("Mike", "Tyson"));
-
-    final Query<Person> query = getDatastore().createQuery(Person.class);
-    query.or(
-        query.criteria("last").equal("Bloomberg"),
-        query.criteria("last").equal("Tyson")
-    );
-
-    final PersonCriteria criteria = new PersonCriteria(getDatastore());
-    criteria.or(
-        criteria.last("Bloomberg"),
-        criteria.last("Tyson")
-    );
-
-    Assert.assertEquals(criteria.query().asList().size(), 2);
-    Assert.assertEquals(query.asList(), criteria.query().asList());
-  }
-
-  public void andQueries() {
-    getDatastore().save(new Person("Mike", "Bloomberg"));
-    getDatastore().save(new Person("Mike", "Tyson"));
-
-    final Query<Person> query = getDatastore().createQuery(Person.class);
-    query.and(
-        query.criteria("first").equal("Mike"),
-        query.criteria("last").equal("Tyson")
-    );
-
-    final PersonCriteria criteria = new PersonCriteria(getDatastore());
-    criteria.and(
-        criteria.first("Mike"),
-        criteria.last("Tyson")
-    );
-
-    Assert.assertEquals(criteria.query().asList().size(), 1);
-    Assert.assertEquals(query.asList(), criteria.query().asList());
-  }
-
-  private Datastore getDatastore() {
-    if (datastore == null) {
-      MongoClient mongo = new MongoClient();
-      DB critter = mongo.getDB("critter");
-      critter.dropDatabase();
-      final Morphia morphia = new Morphia();
-      morphia.mapPackage("com.antwerkz");
-      datastore = morphia.createDatastore(mongo, "critter");
+        WriteResult delete = datastore.delete(query);
+        Assert.assertEquals(delete.getN(), 1);
     }
-    return datastore;
-  }
+
+    @Test(enabled = false) // waiting morphia issue #711
+    public void updateFirst() {
+        for (int i = 0; i < 100; i++) {
+            getDatastore().save(new Person("First" + i, "Last" + i));
+        }
+        PersonCriteria criteria = new PersonCriteria(getDatastore());
+        criteria.last().contains("Last2");
+        criteria.getUpdater()
+                .age(1000L)
+                .update();
+
+        criteria = new PersonCriteria(getDatastore());
+        criteria.age(1000L);
+
+        Assert.assertEquals(criteria.query().count(), 1L);
+    }
+
+    @Test
+    public void removes() {
+        for (int i = 0; i < 100; i++) {
+            getDatastore().save(new Person("First" + i, "Last" + i));
+        }
+        PersonCriteria criteria = new PersonCriteria(getDatastore());
+        criteria.last().contains("Last2");
+        WriteResult result = criteria.delete();
+        Assert.assertEquals(result.getN(), 11);
+        Assert.assertEquals(criteria.query().count(), 0);
+
+        criteria = new PersonCriteria(getDatastore());
+        Assert.assertEquals(criteria.query().count(), 89);
+
+        criteria = new PersonCriteria(getDatastore());
+        criteria.last().contains("Last3");
+        result = criteria.delete(new DeleteOptions().writeConcern(WriteConcern.MAJORITY));
+        Assert.assertEquals(result.getN(), 11);
+        Assert.assertEquals(criteria.query().count(), 0);
+    }
+
+    public void embeds() {
+        Invoice invoice = new Invoice();
+        invoice.setDate(LocalDateTime.now());
+        Person person = new Person("Mike", "Bloomberg");
+        getDatastore().save(person);
+        invoice.setPerson(person);
+        invoice.add(new Address("New York City", "NY", "10036"));
+        getDatastore().save(invoice);
+
+        invoice = new Invoice();
+        invoice.setDate(LocalDateTime.now());
+        person = new Person("Andy", "Warhol");
+        getDatastore().save(person);
+
+        invoice.setPerson(person);
+        invoice.add(new Address("NYC", "NY", "10018"));
+        getDatastore().save(invoice);
+
+        InvoiceCriteria criteria1 = new InvoiceCriteria(datastore);
+        criteria1.addresses().city().order();
+        Assert.assertEquals(criteria1.query().find().toList().get(0).getAddresses().get(0).getCity(), "NYC");
+
+        InvoiceCriteria criteria2 = new InvoiceCriteria(datastore);
+        criteria2.addresses().city().order(false);
+        Assert.assertEquals(criteria2.query().find().toList().get(0).getAddresses().get(0).getCity(), "New York City");
+    }
+
+    public void orQueries() {
+        getDatastore().save(new Person("Mike", "Bloomberg"));
+        getDatastore().save(new Person("Mike", "Tyson"));
+
+        final Query<Person> query = getDatastore().createQuery(Person.class);
+        query.or(
+            query.criteria("last").equal("Bloomberg"),
+            query.criteria("last").equal("Tyson")
+                );
+
+        final PersonCriteria criteria = new PersonCriteria(getDatastore());
+        criteria.or(
+            criteria.last("Bloomberg"),
+            criteria.last("Tyson")
+                   );
+
+        Assert.assertEquals(criteria.query().count(), 2);
+        Assert.assertEquals(query.find().toList(), criteria.query().find().toList());
+    }
+
+    public void andQueries() {
+        getDatastore().save(new Person("Mike", "Bloomberg"));
+        getDatastore().save(new Person("Mike", "Tyson"));
+
+        final Query<Person> query = getDatastore().createQuery(Person.class);
+        query.and(
+            query.criteria("first").equal("Mike"),
+            query.criteria("last").equal("Tyson")
+                 );
+
+        final PersonCriteria criteria = new PersonCriteria(getDatastore());
+        criteria.and(
+            criteria.first("Mike"),
+            criteria.last("Tyson")
+                    );
+
+        Assert.assertEquals(criteria.query().find().toList().size(), 1);
+        Assert.assertEquals(query.find().toList(), criteria.query().find().toList());
+    }
+
+    private Datastore getDatastore() {
+        if (datastore == null) {
+            MongoClient mongo = new MongoClient();
+            MongoDatabase critter = mongo.getDatabase("critter");
+            critter.drop();
+            final Morphia morphia = new Morphia();
+            morphia.mapPackage("com.antwerkz");
+            datastore = morphia.createDatastore(mongo, "critter");
+        }
+        return datastore;
+    }
 }
